2014-02-02  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (do_eval_args): If the dotted position of the argument
	list evaluates to a vector, then convert the vector to a list.

	* txr.1: Document compound forms, and how they allow the dotted
	position and how it may be a vector.

2014-02-02  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Register vector_list function a second time
	under the name vec, as a variadic function.

	* txr.1: Document vec.

2014-02-01  Kaz Kylheku  <kaz@kylheku.com>

	* hash.c (hash_mark, hash_grow, make_similar_hash,
	copy_hash, gethash_l, gethash, gethash_f, gethash_n, 
	hash_count, hash_next, hash_eql, hash_equal): Use
	num_fast instead of num.
	(make_hash): An attempt to make a weak-keys hash that has
	equal-based keys is nonsensical; it is now diagnosed with
	an exception. Use num_fast instead of num.
	(hash_process_weak): Call breakpt whenever the weak object(s) due to
	which entries are being deleted match the value in break_obj.
	Use num_fast instead of num.

	* parser.l (parse_init): Bugfix: the forms_to_ln_hash
	was equal-based, which makes no sense.

2014-02-01  Kaz Kylheku  <kaz@kylheku.com>

	Export break_obj.

	* gc.c (break_obj): Change to external linkage.
	(mark): Use t variable instead of re-evaluating obj->t.type.

	* gc.h (break_obj): Declared.

2014-02-01  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (d): Disable garbage collection around the dump.
	It's importa for this function not to have the side effect
	of triggering garbage collection, when it is used for 
	debugging issues that show up under --gc-debug.

2014-01-31  Kaz Kylheku  <kaz@kylheku.com>

	* configure: remove stray debugging printf from the
	GNU Make check. This was introduced in May 2012.

2014-01-30  Kaz Kylheku  <kaz@kylheku.com>

	* genvim.txr: Support floating-point constants.
	Do not color embedded decimal integers in symbols as integers.

	* txr.vim: Regenerated.

2014-01-30  Kaz Kylheku  <kaz@kylheku.com>
